fix background stretching

--- a/files/style.css
+++ b/files/style.css
@@ -59,6 +59,7 @@ p {
     border-bottom: 1px solid black;
     padding-left: 5px;
     padding-top: 5px;
+    background-size: 100% 100%;
 }
 
 .speech {
